--- a/src/Css/index.css
+++ b/src/Css/index.css
@@ -5,8 +5,10 @@
 
 * { /*With this selector we select all the elements in our html*/ 
     background: var(background); /*We declare that the background of the page is the background variable*/
-    font-family: 'OpenSans', sans-serif; /*We set the text font in OpenSans*/
-    text-align: center; /*We align the text to center*/
+    font-family: 'Fjalla One', sans-serif; /*We set the text font in Fjalla One*/
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 /* Selectors in css: 
@@ -31,14 +33,42 @@
         propiety: value;
     }
 
-*/ 
+
+
+ Types of texts in css:
+    $font-size
+    $font-family
+    $line-height
+    $font-weigth
+
+
+ Box propieties:
+    $font-size
+    $font-family
+    $line-height
+    $font-weigth
+
+ Center a box:
+    .box {
+        background-color: <color>;
+        display: inline-block;
+        padding: 100px;
+        box-sizing: border-box;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+*/
 
 .Title-list:hover { /*This is how we get the letter to change colour when we hover the cursor over it.*/
     color: red;
 }
 
 .Title1 {
-    font-size: 3em; /* 1em = 16px */
+    font-size: 4em; /* 1em = 16px */
+    font-family: 'Fjalla One', sans-serif;
 }
 
 body { /*We access the body of our html file.*/
